# HomeWork_19.2

./: groups.json  products.json  pyproject.toml
blog/: models.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_created_at_blog_image_blog_is_published_and_more.py  0003_remove_blog_image.py  0004_remove_blog_created_at_remove_blog_updated_at.py  0005_blog_created_at_blog_image_blog_updated_at.py  0006_remove_blog_updated_at.py  0007_alter_blog_image.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_blog.py  0002_product_manufactured_at.py  0003_version.py  0004_alter_version_options.py  0005_alter_version_product_alter_version_version_sign.py  0006_product_user.py  0007_alter_product_options.py  0008_alter_product_options_product_status.py
catalog/templates/: contacts.html  home.html  product_detail.html  products_list.html
catalog/templates/catalog/: category_list.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html  user_password_reset.html  user_password_set_new.html
(+1 files in other folders)
