[tool.poetry]
name = "homework-19-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "homework_19"}]

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
black = "^24.8.0"
pillow = "^10.4.0"
ipython = "^8.27.0"
pytils = "^0.4.1"
flake8 = "^7.1.1"
django = "4.2.2"
redis = "^5.1.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
